# the_ray_tracer_challenge

./: .gitignore  CMakeLists.txt  Canvas.h  Color.h  Intersection.cpp  Intersection.h  Lighting.cpp  Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  PointLight.h  Ray.h  Sphere.h  Vector4.h  m2x2.cpp  m2x2.h  m3x3.cpp  m3x3.h  m4x4.cpp  m4x4.h  main.cpp  projectile_example.cpp  test_canvas.cpp  test_color.cpp  test_vector.cpp
examples/: CMakeLists.txt  cover.cpp  e01_projectile.cpp  e02_clock.cpp  e03_gradient.cpp  e04_mandelbrot.cpp  e05_sphere_silhouette.cpp  e06_sphere.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp
first_version/: Canvas.h  Lighting.h  Material.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Ray.h  Sphere.h  Vector4.h
src/: CMakeLists.txt  Camera.h  Canvas.h  Material.h  Matrix4x4.cpp  Matrix4x4.h  Ray.h  Tuple.h  World.cpp  World.h  constants.h  math_util.h  render.cpp  render.h  rtc.cpp  rtc.h
src/canvas_to_file/: PPM.cpp  PPM.h
src/intersection/: Intersections.cpp  Intersections.h  intersect.cpp  intersect.h
src/light/: PointLight.h  lighting.cpp  lighting.h
src/model/: CSG.h  Cone.h  Cube.h  Cylinder.h  Group.h  Object.h  Plane.h  SmoothTriangle.h  Sphere.h  Triangle.h
src/obj_parser/: OBJ_Parser.cpp  OBJ_Parser.h
src/pattern/: Checker3DPattern.h  GradientPattern.h  Pattern.h  RingPattern.h  StripedPattern.h
tests/: CMakeLists.txt  test_canvas.cpp  test_chained_transformations.cpp  test_color.cpp  test_hit_intersections.cpp  test_intersection_object.cpp  test_lighting_function.cpp  test_material.cpp  test_matrix2x2.cpp  test_matrix3x3.cpp  test_matrix4x4.cpp  test_point_light.cpp  test_ray.cpp  test_ray_sphere_intersection.cpp  test_reflection.cpp  test_rotation.cpp  test_scaling.cpp  test_shearing.cpp  test_sphere.cpp  test_translation.cpp  test_vector.cpp
tests/camera/: CMakeLists.txt  casting_rays.cpp  create_camera.cpp  pixel_size.cpp
tests/canvas/: CMakeLists.txt  canvas_to_ppm.cpp  create_canvas.cpp  writing_canvas.cpp
tests/color/: CMakeLists.txt  adding_colors.cpp  create_color.cpp  multiplying_by_scalar.cpp  multiplying_colors.cpp  subtracting_colors.cpp
tests/intersection/: CMakeLists.txt  hit_intersections.cpp  prepare_computations_test.cpp  ray_cone.cpp  ray_csg.cpp  ray_cube.cpp  ray_cylinder.cpp  ray_group.cpp  ray_plane.cpp  ray_smooth_triangle.cpp  ray_sphere.cpp  ray_transformed_object.cpp  ray_transformed_sphere.cpp  ray_triangle.cpp  ray_world.cpp  test_intersection_allowed.cpp  tracking_intersections.cpp
tests/light/: CMakeLists.txt  color_at_function.cpp  create_point_light.cpp  lighting_function.cpp  shade_hit_function.cpp
tests/material/: CMakeLists.txt  create_material.cpp
tests/matrix/: CMakeLists.txt  create_matrix4x4.cpp  identity_matrix_multiplication.cpp  matrix4x4_determinant.cpp  matrix4x4_equality.cpp  matrix4x4_inequality.cpp  matrix_inverse.cpp  multiply_matrices4x4.cpp  multiply_matrix4x4_and_tuple.cpp  transposing_matrix.cpp
tests/model/: CMakeLists.txt  TestObject.h  cone_normals.cpp  create_csg.cpp  create_glass_sphere.cpp  create_group.cpp  create_smooth_triangle.cpp  create_triangle.cpp  cube_normals.cpp  cylinder_bounds.cpp  cylinder_normals.cpp  object_material.cpp  object_normals.cpp  object_transformation.cpp  plane_normal.cpp  sphere_material.cpp  sphere_normals.cpp  sphere_transformation.cpp
tests/obj_parser/: CMakeLists.txt  test_object_parser.cpp
tests/old/: test_canvas.cpp  test_chained_transformations.cpp  test_hit_intersections.cpp  test_intersection_object.cpp  test_lighting_function.cpp  test_material.cpp  test_matrix2x2.cpp  test_matrix3x3.cpp  test_matrix4x4.cpp  test_point_light.cpp  test_ray.cpp  test_ray_sphere_intersection.cpp  test_reflection.cpp  test_rotation.cpp  test_scaling.cpp  test_shearing.cpp  test_sphere.cpp  test_translation.cpp
tests/pattern/: CMakeLists.txt  TestPattern.h  checker3d_pattern_properties.cpp  create_striped_pattern.cpp  gradient_pattern_properties.cpp  pattern_transformation.cpp  ring_pattern_properties.cpp  striped_pattern_properties.cpp
tests/ray/: CMakeLists.txt  create_ray.cpp  point_on_ray.cpp  transform_ray.cpp
tests/render/: CMakeLists.txt  color_at_function.cpp  is_shadowed_function.cpp  lighting_function.cpp  pattern_at_object_fn.cpp  reflected_color_fn.cpp  refracted_color_fn.cpp  render_default_world.cpp  schlick_function.cpp  shade_hit_function.cpp  stripe_at_object_fn.cpp
tests/transformation/: CMakeLists.txt  chained_transformations.cpp  rotation.cpp  scaling.cpp  shearing.cpp  translation.cpp  viewing_matrix.cpp
tests/tuple/: CMakeLists.txt  adding_tuples.cpp  create_point_tuple.cpp  create_vector_tuple.cpp  cross_product.cpp  dividing_by_scalar.cpp  dot_product.cpp  factory_point_tuple.cpp  factory_vector_tuple.cpp  magnitude_of_vector.cpp  multiplying_by_scalar.cpp  negating_tuples.cpp  normalizing_vector.cpp  reflecting_vector.cpp  subtracting_tuples.cpp
tests/world/: CMakeLists.txt  create_default_world.cpp  create_world.cpp
