include_directories(${CMAKE_SOURCE_DIR}/src)
add_executable(EXAMPLE_Projectile example01.cpp)
target_link_libraries(EXAMPLE_Projectile PRIVATE RTC_rtc)

add_executable(EXAMPLE_Trajectory example02.cpp)
target_link_libraries(EXAMPLE_Trajectory PRIVATE RTC_rtc)

add_executable(EXAMPLE_ClockFaceBackground example03.cpp)
target_link_libraries(EXAMPLE_ClockFaceBackground PRIVATE RTC_rtc)

add_executable(EXAMPLE_SphereSilhouette example04.cpp)
target_link_libraries(EXAMPLE_SphereSilhouette PRIVATE RTC_rtc)
